--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -138,6 +138,9 @@ body {
 
 .docs-main-contents {
   @apply min-w-0 max-w-2xl flex-auto px-4 py-16 lg:max-w-none lg:pl-8 lg:pr-0 xl:px-16;
+  > div {
+    @apply max-w-[720px] mx-auto;
+  }
 }
 
 @tailwind variants;
