--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -145,7 +145,9 @@ body {
   }
   body {
     @apply bg-background text-foreground;
-    font-feature-settings: 'rlig' 1, 'calt' 1;
+    font-feature-settings:
+      'rlig' 1,
+      'calt' 1;
   }
 }
 
