--- a/src/app/(external-pages)/docs/layout.css
+++ b/src/app/(external-pages)/docs/layout.css
@@ -20,3 +20,11 @@ ol.toc-level:not(.toc-level-1) {
 ol.toc-level a {
   @apply font-normal text-slate-500 hover:text-slate-700 dark:text-slate-400 dark:hover:text-slate-300;
 }
+
+code:after {
+  content: none !important;
+}
+
+code:before {
+  content: none !important;
+}
