--- a/src/app/(external-pages)/layout.css
+++ b/src/app/(external-pages)/layout.css
@@ -11,14 +11,14 @@ html {
 }
 
 ol.toc-level {
-  @apply mt-2 space-y-3  text-slate-500 dark:text-slate-400;
+  @apply mt-2 space-y-3 text-neutral-500 dark:text-neutral-400;
 }
 ol.toc-level:not(.toc-level-1) {
   @apply pl-5;
 }
 
 ol.toc-level a {
-  @apply font-normal text-slate-500 hover:text-slate-700 dark:text-slate-400 dark:hover:text-slate-300;
+  @apply font-normal text-neutral-500 hover:text-neutral-700 dark:text-neutral-400 dark:hover:text-neutral-300;
 }
 
 code:after {
@@ -44,7 +44,7 @@ code > [data-line]::before {
   width: 1rem;
   margin-right: 1rem;
   text-align: right;
-  color: gray;
+  color: text-neutral-500;
 }
 
 code[data-line-numbers-max-digits='2'] > [data-line]::before {
@@ -58,19 +58,15 @@ code[data-line-numbers-max-digits='3'] > [data-line]::before {
 [data-rehype-pretty-code-title] {
   border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
-  --tw-bg-opacity: 1;
-  background-color: rgb(63 63 70 / 100);
+  @apply bg-neutral-100;
   padding: 0.5rem 0.75rem;
   font-size: 0.875rem;
   line-height: 1.25rem;
   font-weight: 600;
-  --tw-text-opacity: 1;
-  color: rgb(228 228 231 / 100);
+  @apply text-neutral-200;
 }
 
 figcaption + pre {
   border-top-left-radius: 0 !important;
   border-top-right-radius: 0 !important;
 }
-
-
