--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,6 +24,11 @@
     --input: 220 13% 91%;
     --ring: 262.1 83.3% 57.8%;
     --radius: 0.5rem;
+    --chart-1: 225.28 76.81% 13.53%;
+    --chart-2: 225.28 76.81% 13.53%;
+    --chart-3: 225 77% 35%;
+    --chart-4: 225 77% 45%;
+    --chart-5: 225 77% 55%;
   }
 
   .dark {
@@ -46,6 +51,11 @@
     --border: 215 27.9% 16.9%;
     --input: 215 27.9% 16.9%;
     --ring: 263.4 70% 50.4%;
+    --chart-1: 225.28 76.81% 13.53%;
+    --chart-2: 225.28 76.81% 13.53%;
+    --chart-3: 225 77% 35%;
+    --chart-4: 225 77% 45%;
+    --chart-5: 225 77% 55%;
   }
 }
 
